add swagger data to inventory handlers
