# docs/swagger.yaml
@@ -19,6 +19,17 @@ definitions:
       proteins:
         type: integer
     type: object
+  domains.Inventory:
+    properties:
+      inventoryId:
+        type: string
+      name:
+        type: string
+      userId:
+        type: string
+      weight:
+        type: integer
+    type: object
   domains.Meal:
     properties:
       id:
@@ -61,6 +72,13 @@ definitions:
       name:
         type: string
       proteins:
+        type: integer
+    type: object
+  forms.InventoryForm:
+    properties:
+      name:
+        type: string
+      weight:
         type: integer
     type: object
   forms.MealForm:
@@ -230,6 +248,90 @@ paths:
       summary: Update ingredient
       tags:
       - Ingredient
+  /inventory:
+    get:
+      description: Get inventory list
+      parameters:
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: perPage
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domains.Inventory'
+            type: array
+      summary: Get inventory list
+      tags:
+      - Inventory
+    post:
+      description: Create new inventory
+      parameters:
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/forms.InventoryForm'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/responses.ResponseAdd'
+      summary: Create new inventory
+      tags:
+      - Inventory
+  /inventory/{id}:
+    get:
+      description: Retrieve inventory by id
+      parameters:
+      - description: id
+        in: path
+        name: request
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domains.Inventory'
+      summary: Retrieve inventory by id
+      tags:
+      - Inventory
+    put:
+      description: Update inventory
+      parameters:
+      - description: id
+        in: path
+        name: request
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/forms.InventoryForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.ResponseStatus'
+      summary: Update inventory
+      tags:
+      - Inventory
   /meal:
     get:
       description: Get meals list by auth user id
